--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -28317,6 +28317,9 @@
         }
       }
     },
+    "Camera controls" : {
+
+    },
     "Camera switching" : {
       "localizations" : {
         "de" : {
