--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -82055,6 +82055,9 @@
         }
       }
     },
+    "PIXELLATE STRENGTH" : {
+
+    },
     "Platform to stream to" : {
       "localizations" : {
         "de" : {
