Rename SRTLA relay to Moblink and remoce config file.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -123812,7 +123812,7 @@
         }
       }
     },
-    "Use phones as additional SRTLA bonding connections. Install Moblink on Android phones to use them." : {
+    "Use phones as additional SRTLA and RIST bonding connections. Install Moblink on Android phones to use them." : {
 
     },
     "Use the Fast IRL algorithm unless you know what you are doing!" : {
