--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -76982,7 +76982,7 @@
         }
       }
     },
-    "No streamers discovered yet." : {
+    "No streamers discovered yet on your local network." : {
 
     },
     "No widgets found. Create widgets in Settings → Scenes → Widgets." : {
