Low light boost.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -65155,7 +65155,7 @@
         }
       }
     },
-    "Low light boost" : {
+    "Low light boost (LLB)" : {
 
     },
     "Lower FPS generally gives brighter image in low light conditions." : {
