--- a/Moblin Widget/Localizable.xcstrings
+++ b/Moblin Widget/Localizable.xcstrings
@@ -48,6 +48,12 @@
             "state" : "translated",
             "value" : "Moblin 小工具"
           }
+        },
+        "zh-HK" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Moblin 小工具"
+          }
         }
       }
     }
