--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -29601,6 +29601,9 @@
         }
       }
     },
+    "Camera preview" : {
+
+    },
     "Camera switching" : {
       "localizations" : {
         "de" : {
