New messages at top.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -80107,6 +80107,9 @@
         }
       }
     },
+    "New messages at top" : {
+
+    },
     "New resubscribe" : {
       "localizations" : {
         "de" : {
