Fix mic change freezing UI.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -52867,6 +52867,7 @@
       }
     },
     "Failed to select mic" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
