Bitrate drop fix ideas, but not that great.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -25853,6 +25853,9 @@
         }
       }
     },
+    "Bitrate drop fix" : {
+
+    },
     "Bitrate increase speed" : {
       "localizations" : {
         "de" : {
@@ -40084,6 +40087,9 @@
           }
         }
       }
+    },
+    "Data rate limit" : {
+
     },
     "Date" : {
       "localizations" : {
