Relaxed bitrate experiment for BELABOX algorithm.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -95369,6 +95369,9 @@
         }
       }
     },
+    "Relaxed bitrate decrement after scene switch" : {
+
+    },
     "Relay" : {
       "localizations" : {
         "de" : {
